# get_coordinates_rs

./: README.md  README_EN.md
build_dpkg/: build.sh  clean.sh
build_dpkg/config/: Dockerfile  init.sh
build_pacman/: PKGBUILD  build.sh  clean.sh
build_pacman/config/: Dockerfile  init.sh
coordinates_picker/: Cargo.toml
coordinates_picker/for_test/: test_2  test_coo
coordinates_picker/src/: get_args.rs  key_position.rs  lib.rs  main.rs  split_line.rs
