[package]
name = "coordinates_picker"
authors = ["Aki <my_mail@aki.com>"]
license = "MIT"
description = "a tool to extract the optimized coordinates from Gaussian *LOG files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coordinates_picker"
path = "src/lib.rs"

[[bin]]
name = "pick_co"
path = "src/main.rs"

[dependencies]
regex="1.5"
assert_approx_eq="1.1.0"
